crates/lex/tests/ui/duplicate_span_attribute_tuple_struct.stderr
error: expected only one #[span] field attribute, unable to infer which one to use.
 --> tests/ui/duplicate_span_attribute_tuple_struct.rs
  |
  | struct Foo<'src>(#[span] Span<'src>, #[span] Span<'src>);
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
